Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,9 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "defavorite_destination()\n",
+    "def favorite_destination():\n",
+    "    travel_destinations.append\n",
+    "    trave\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
