--- a/index.ipynb
+++ b/index.ipynb
@@ -195,8 +195,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    travel_destinations.append\n",
-    "    trave\n",
+    "    travel_destinations.append['madagascar']\n",
+    "    \n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
