Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -189,15 +189,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    travel_destinations.append['madagascar']\n",
-    "    \n",
-    "travel_destinations[-1] # 'madagascar'"
+    "    favorite = travel_destinations[-1] \n",
+    "    return favorite # 'madagascar'"
    ]
   },
   {
