--- a/index.ipynb
+++ b/index.ipynb
@@ -189,15 +189,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.favorite_destination()>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    travel_destinations.append['madagascar']\n",
     "    favorite = travel_destinations[-1] \n",
-    "    return favorite # 'madagascar'"
+    "    return favorite # 'madagascar'\n",
+    "favorite_destination"
    ]
   },
   {
