--- a/index.ipynb
+++ b/index.ipynb
@@ -208,8 +208,8 @@
     "def favorite_destination():\n",
     "    travel_destinations.append['madagascar']\n",
     "    favorite = travel_destinations[-1] \n",
-    "    return favorite # 'madagascar'\n",
-    "favorite_destination"
+    "    return favorite \n",
+    "favorite_destination()\n"
    ]
   },
   {
