--- a/index.ipynb
+++ b/index.ipynb
@@ -208,7 +208,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    for indextravel_destinations.append['madagascar']\n",
+    "    travel_destinations.append['madagascar']\n",
     "    favorite = travel_destinations[-1] \n",
     "    return favorite \n",
     "favorite_destination()\n"
