--- a/index.ipynb
+++ b/index.ipynb
@@ -189,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['madagascar']"
+       "'madagascar'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    travel_destinations.append(['madagascar'])\n",
+    "    travel_destinations.append('madagascar')\n",
     "    favorite = travel_destinations[-1]\n",
     "    return favorite \n",
     "favorite_destination()\n"
