--- a/index.ipynb
+++ b/index.ipynb
@@ -227,8 +227,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalize = travel_destinations.title()\n",
-    "    return capitalize"
+    "    capitali"
    ]
   },
   {
