Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,15 +221,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-24-53636cc5ac52>, line 3)",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-26-007cbd396e29>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-53636cc5ac52>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    capitalized_countries[]\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-007cbd396e29>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    capitalize_countries.append(destination.title())\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalized_countries = []\n",
-    "    for destination in travel_destinations\n",
+    "    for destination in travel_destinations:\n",
     "    capitalize_countries.append(destination.title())\n",
     "    return capitalized_countries"
    ]
